# rig-playground

./: Cargo.toml  README.md
agent/: Cargo.toml
agent/src/: lib.rs  main.rs
http/: explore.http
mcp/: Cargo.toml
mcp/src/: example_mcp.rs  main.rs
src/: example_mcp.rs  lib.rs  main.rs
