[package]
name = "rig-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.5", features = [
    "server",
    "schemars",
    "macros",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server", ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
axum = { version = "0.8", features = ["macros"] }
tokio-util = "0.7.15"
anyhow = "1.0.98"
