[workspace]
members = [
    "agent",
    "mcp",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
rig-core = "0.17"
rmcp = { version = "0.5", features = [
    "server",
    "schemars",
    "macros",
    "transport-sse-server",
    "transport-io",
    "transport-streamable-http-server",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "std",
    "fmt",
] }
axum = { version = "0.8", features = ["macros"] }
anyhow = "1.0.98"
